# deckflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
api/: main.py
cli/: main.py
deckflow/: __init__.py  config.py  local_time.py
deckflow/compiler/: __init__.py  compile.py  loader.py  migrate.py  resolver.py  validator.py
deckflow/db/: __init__.py  repository.py  schema.py
deckflow/db/repository/: __init__.py  _helpers.py  analytics.py  base.py  cards.py  collections.py  concepts.py  reviews.py  scheduling_config.py
deckflow/extract/: __init__.py  card_file.py  legacy.py  markdown_v1.py
deckflow/models/: __init__.py  domain.py
deckflow/parser/: __init__.py  legacy.py  markdown.py  v1.py
deckflow/scheduler/: __init__.py  fsrs.py
deckflow/schemas/: __init__.py  compiled.py  specs.py
deckflow/service/: __init__.py  analytics_service.py  import_service.py  library_service.py  queue_service.py  review_service.py  stats_service.py
docs/: ARCHITECTURE.md  DECK_FORMAT.md  DECK_PROJECT.md
examples/: advanced_sample_deck.md  sample_deck.md
examples/legacy/: advanced_sample_deck.md
examples/python-de-interview/: deckflow.yaml
scripts/: check-git-author.sh  dev.sh
tests/: test_analytics.py  test_analytics_charts.py  test_api.py  test_compiler.py  test_config_keys.py  test_deck_scheduling_config.py  test_focused_queue.py  test_import_idempotency.py  test_library_service.py  test_local_time.py  test_multi_collection.py  test_parser.py  test_scheduler.py  test_v1_parser.py
tests/fixtures/: sample_deck.md
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: CardAnalyticsPanel.tsx  DeckBreadcrumb.tsx  DueBadge.tsx  EmptyState.tsx  ErrorAlert.tsx  (+4 more)
(+39 files in other folders)
