[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckflow"
version = "0.2.0"
description = "Data-centric spaced repetition for git-native markdown decks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "fsrs>=6.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
deckflow = "cli.main:app"

[project.urls]
Homepage = "https://github.com/OmarFarooq908/deckflow"
Repository = "https://github.com/OmarFarooq908/deckflow"
Issues = "https://github.com/OmarFarooq908/deckflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["deckflow", "cli", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"cli/main.py" = ["B008"]
"deckflow/db/repository/_helpers.py" = ["SIM401"]

[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
packages = ["deckflow", "cli", "api"]

[[tool.mypy.overrides]]
module = [
    "deckflow.db.repository.collections",
    "deckflow.db.repository.concepts",
    "deckflow.db.repository.cards",
    "deckflow.db.repository.reviews",
    "deckflow.db.repository.analytics",
    "deckflow.db.repository.scheduling_config",
    "deckflow.db.repository",
]
disable_error_code = ["attr-defined", "misc", "has-type", "no-any-return"]

[[tool.mypy.overrides]]
module = ["fsrs.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["deckflow", "cli", "api"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = false
